archive/custom-metrics-test/server-http-newrelic/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: server-http-newrelic
  namespace: custom-metrics-test
  labels:
    app.kubernetes.io/instance: server-http-newrelic
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server-http-newrelic
    helm.sh/chart: app-template-0.1.1
spec:
  host: server-http-newrelic-server-http.apps.proxmox-0.v3spogu.xyz
  to:
    kind: Service
    name: server-http-newrelic
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
